[gd_scene load_steps=8 format=3 uid="uid://bed4fidap1kpd"]

[ext_resource type="Script" path="res://scenes/levels/intro.gd" id="1_nry2y"]
[ext_resource type="PackedScene" uid="uid://ykv6f55ab02i" path="res://scenes/robot.tscn" id="1_x87a6"]
[ext_resource type="Resource" uid="uid://cbm32h0g03yre" path="res://resources/levels/level_intro.tres" id="2_koq25"]
[ext_resource type="PackedScene" uid="uid://dkk0isei6ttad" path="res://scenes/game_camera.tscn" id="3_7e525"]
[ext_resource type="Texture2D" uid="uid://dt7kwq10k4sls" path="res://assets/ui/closedeye.png" id="3_tg21l"]
[ext_resource type="PackedScene" uid="uid://qbhqvqkbs31j" path="res://scenes/ui/pause_menu.tscn" id="4_1jtti"]
[ext_resource type="Texture2D" uid="uid://c8mc8tww2rf83" path="res://assets/ui/ear.png" id="4_t1vn6"]

[node name="Intro" type="Node2D"]
script = ExtResource("1_nry2y")
_level_definition = ExtResource("2_koq25")

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
blend_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -3196.0
offset_top = -1785.0
offset_right = 3260.0
offset_bottom = 1863.0

[node name="Robot" parent="." instance=ExtResource("1_x87a6")]

[node name="GameCamera" parent="Robot" instance=ExtResource("3_7e525")]

[node name="StartAudioTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.4
one_shot = true

[node name="BlackColorRect" type="ColorRect" parent="."]
light_mask = 2
visibility_layer = 2
offset_left = -77.0
offset_top = -63.0
offset_right = 105.0
offset_bottom = 75.0
color = Color(0, 0, 0, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -132.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("3_tg21l")
stretch_mode = 4

[node name="EarIconTextureRect" type="TextureRect" parent="CanvasLayer/Control/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_t1vn6")
stretch_mode = 4

[node name="PauseMenu" parent="." instance=ExtResource("4_1jtti")]
visible = false
